<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wholeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/MovieImage"
            android:layout_width="100dp"
            android:layout_height="125dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/example" />

        <TextView
            android:id="@+id/MovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:layout_toEndOf="@id/MovieImage"
            android:text="@string/template_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/MovieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/MovieName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/MovieImage"
            android:drawablePadding="2dp"
            android:text="@string/template_genre" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>